# battery_saver_desktop

./: .gitignore  Makefile  README.md  battery_saver.py  dashboard.json  docker-compose.yml  promtail-config.yaml  pyproject.toml  setup.py
