[tool.poetry]
name = "batterysaverdesktop"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@engee.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
