[project]
name = "batterysaverdesktop"
version = "0.1.0"
description = ""
authors = [{ name = "Александр Рахмаев", email = "rahmaevao@engee.cloud" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "retry>=0.9.2,<0.10",
]

[dependency-groups]
dev = ["ruff>=0.3.3,<0.4"]

